--- a/index.html
+++ b/index.html
@@ -1,33 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <title>Dynamic Shopping Cart</title>
-</head>
-<body>
-  <!-- Layout for Shopping Cart: includes Item name, quantity, price fields and an Add Item button  -->
-  <div class="container">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+    <script src="script.js" defer></script>
+    <title>Dynamic Shopping Cart</title>
+  </head>
+  <body>
+    <!-- Layout for Shopping Cart: includes Item name, quantity, price fields and an Add Item button  -->
+    <div class="container">
       <header>
-       <h1>Shopping Cart</h1>
-       <div class="cart-icon-container">
-        <i class="fas fa-shopping-cart cart-icon"></i>
-        <span id="cart-count">0</span>
-       </div>
+        <h1>Shopping Cart</h1>
+        <div class="cart-icon-container">
+          <i class="fas fa-shopping-cart cart-icon"></i>
+          <span id="cart-count">0</span>
+        </div>
       </header>
-  <div id="item-container">
-      <input type="text" id="name" placeholder="Item Name" required>
-      <input type="number" id="quantity" min="1" value="0" required>
-      <input type="number" id="price" placeholder="Item Price" min="0" step="0.01" required>
-      <button id="add-item">Add Item</button>
+      <div id="item-container">
+        <input type="text" id="name" placeholder="Item Name" required />
+        <input type="number" id="quantity" min="1" value="1" required />
+        <input
+          type="number"
+          id="price"
+          placeholder="Item Price"
+          min="0"
+          step="0.01"
+          required
+        />
+        <button id="add-item">Add Item</button>
+      </div>
+      <div class="cart-container">
+        <h2>Cart Items</h2>
+        <ul id="cart-item"></ul>
+        <h3 class="total">Subtotal: $<span id="total-amount">0.00</span></h3>
+      </div>
     </div>
-  <div class="cart-container">
-      <h2>Cart Items</h2>
-      <ul id="cart"></ul>
-      <h3 class="total">Subtotal: $<span id="total-amount">0.00</span></h3>
-    </div>
-  </div>
-</body>
+  </body>
 </html>
